<resources>
    <string name="app_name">EcommerceApp_Kotlin</string>
    <string name="signIn">Sign In</string>
    <string name="Email">Email Address</string>
    <string name="password">Enter Password</string>
    <string name="confirmpwd">Confirm Password</string>
    <string name="button_signUp">Sign Up</string>
    <string name="product_image">Product Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="product_name_dummy_val">Product Name</string>
    <string name="dummy_sale_percentage">12.1%</string>
    <string name="dummy_sales_val">130</string>
    <string name="dummy_star_rating">4.5</string>
    <string name="dummy_val_available_product">25</string>
    <string name="Recommended">Recommended For You</string>
</resources>
