<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flash_sale_row_constriantlayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_height="260dp">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        tools:srcCompat="@drawable/cloth1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/product_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/discountPercentageTextView"
        style="@style/dashboard_button_style.small"
        android:layout_width="@dimen/flash_sale_percentage_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:text="21%"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewOverviewFlashSale"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:elevation="@dimen/cardview_banner_elevation"
        app:cardCornerRadius="@dimen/product_overview_cardview_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/product_name"
                style="@style/flash_sale_content_style.bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:maxLines="1"
                android:text="@string/product_name_dummy_val"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/no_sale"
                style="@style/flash_sale_content_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@+id/product_name"
                app:layout_constraintTop_toBottomOf="@+id/product_name" />

            <TextView
                android:id="@+id/sale_text"
                style="@style/flash_sale_content_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="4dp"
                android:text="Sales"
                app:layout_constraintStart_toEndOf="@+id/no_sale"
                app:layout_constraintTop_toBottomOf="@+id/product_name" />

            <ImageView
                android:id="@+id/star_image"
                android:layout_width="@dimen/star_image_width"
                android:layout_height="@dimen/star_image_height"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toStartOf="@+id/product_ratingTV"
                app:layout_constraintTop_toBottomOf="@+id/product_name"
                app:srcCompat="@android:drawable/btn_star_big_on"
                android:contentDescription="/star_image" />

            <TextView
                android:id="@+id/product_ratingTV"
                style="@style/flash_sale_content_style.bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:text="@string/dummy_star_rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_name" />

            <TextView
                android:id="@+id/available_product_amount"
                style="@style/flash_sale_content_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/dummy_val_available_product"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sale_text" />

            <TextView
                android:id="@+id/availableTV"
                style="@style/flash_sale_content_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="4dp"
                android:text="Available"
                app:layout_constraintStart_toEndOf="@+id/available_product_amount"
                app:layout_constraintTop_toBottomOf="@+id/no_sale" />

            <ProgressBar
                android:id="@+id/progressBarAvailabilityFlashSale"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/availableTV" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>